--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Random Choice Picker</h1>
         <h3>1.Enter your options. <br/>
             2.Seperate them using a comma (,) <br/>
-            3.Press ENTER once you are done! <br/>
+            3.Press ENTER once you are done <br/>
         </h3>
-        <textarea placeholder="Enter choices here..." id="textarea"></textarea>
+        <textarea placeholder="Enter options here..." id="textarea"></textarea>
 
         <div id="tags">
             <span class="tag"></span>
